--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,9 @@ lib/bundler/man
 test/tmp
 test/version_tmp
 
+#Ignore notes to self
+.notes
+
 #For those who use IntelliJ RubyMine or related software.
 \.idea
 \.idea/**
